--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
+    "boxicons": "^2.1.1",
+    "classnames": "^2.3.1",
     "gatsby": "^4.9.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^4.9.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-styled-components": "^5.9.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -30,6 +34,7 @@
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.24",
     "typescript": "^4.5.5"
   }
 }
