--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:unit": "jest --passWithNoTests",
+    "test:unit:coverage": "npm run test:unit -- --coverage",
+    "test:unit:watch": "npm run test:unit -- --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
@@ -37,11 +40,19 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^12.1.4",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.24",
+    "babel-jest": "^27.5.1",
+    "babel-preset-gatsby": "^2.9.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.5.5"
   }
 }
